cot-macros/tests/ui/derive_from_request_head_enum.stderr
error: Only structs can derive `FromRequestHead`
 --> tests/ui/derive_from_request_head_enum.rs:3:10
  |
3 | #[derive(FromRequestHead)]
  |          ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FromRequestHead` (in Nightly builds, run with -Z macro-backtrace for more info)
