cot-macros/tests/ui/derive_from_request_head_enum.rs
use cot::request::extractors::FromRequestHead;

#[derive(FromRequestHead)]
enum MyEnum {
    A,
    B,
}

fn main() {}
